--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </nav>
 
       <div class="nav-right">
-        <a href="#">Sign in</a>
-        <a href="#" class="btn">Sign up</a>
+        <a href="./login.html">Sign in</a>
+        <a href="./signup.html" class="btn">Sign up</a>
       </div>
     </header>
    <section class="hero">
